# WavesFinality

./: .gitignore  GracefulChainSplitting.ipynb  WavesFinality.ipynb  mainnet.blocks.parquet  mainnet.generators.parquet  pyproject.toml
white_paper/: DevelopmentPlan.typ  FinalityThreatAnalysis.typ  WavesFinality.typ  refs.bib
